framec_tests/language_specific/cpp/v3_facade_smoke/negative/transition_unquoted_state.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                __frame_transition(B);
            }
        }
}

